<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/viewFile"
        app:showAsAction="always"
        android:visible="false"
        android:title="View Saved File"/>

    <item
        android:id="@+id/showAll"
        app:showAsAction="collapseActionView"
        android:title="Show All Customers"/>

    <item
        android:id="@+id/showFiltered"
        app:showAsAction="collapseActionView"
        android:title="Show Customers to Invite"/>

    <item
        android:id="@+id/save"
        app:showAsAction="collapseActionView"
        android:title="Save Invitation List"/>
</menu>